Fix last paragraph spacing and add section border

--- a/styles.css
+++ b/styles.css
@@ -55,6 +55,7 @@ ol {
     display: flex;
     justify-content: center;
 }
+
 img {
     width: 400px;
     height: auto;
@@ -93,6 +94,11 @@ h2 {
 .first-paragraph {
     margin-top: 0;
     padding-top: 10px;
+}
+
+.last-paragraph {
+    border-bottom: 3px solid cadetblue;
+    padding: 0px 10px 20px 10px;
 }
 
 .index-return {
